# robotica_cese_env

src/pub_sub_exercise/: CMakeLists.txt  README.md  package.xml
src/pub_sub_exercise/launch/: pub_sub.launch.py
src/pub_sub_exercise/src/: publisher.cpp  subscriber.cpp
src/tpf_ros2/: CMakeLists.txt  package.xml
src/tpf_ros2/launch/: hello_moveit.launch.py  hello_moveit_backup.launch.py
src/tpf_ros2/src/: hello_moveit.cpp
src/world_exercise/: CMakeLists.txt  README.md  package.xml
src/world_exercise/launch/: world.launch.py
src/world_exercise/urdf/: arm_robot.urdf
src/world_exercise/worlds/: exercise_world.world
