<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>pub_sub_exercise</name>
  <version>0.0.0</version>
  <description>
    Paquete de ejemplo para ROS 2 que implementa dos nodos: 
    un `publisher` que publica un contador en un topico y expone un servicio para resetearlo, 
    y un `subscriber` que se suscribe al topico y resetea el contador cuando alcanza un valor configurable.
  </description>
  <maintainer email="ivanpodoroska@gmail.com">ivan</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
