<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>world_exercise</name>
  <version>0.0.0</version>
  <description>
  Paquete para simular un brazo robótico de 5 eslabones en un mundo de Gazebo con mesa, cubo y cámara.
  </description>
  <maintainer email="ivanpodoroska@gmail.com">ivan</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>urdf_tutorial</depend>
  <depend>ros_gz</depend>
  <depend>ros_gz_sim</depend>
  <depend>robot_state_publisher</depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <!-- <depend>gazebo_ros</depend> -->

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>